--- a/packages/vkui/src/components/Chip/Chip.module.css
+++ b/packages/vkui/src/components/Chip/Chip.module.css
@@ -13,6 +13,7 @@
   height: 100%;
   padding: 0 8px;
   align-items: center;
+  border-radius: inherit;
 }
 
 .Chip--removable .Chip__in {
@@ -31,18 +32,11 @@
   position: relative;
   flex-grow: 0;
   flex-shrink: 0;
-  display: flex;
-  align-items: center;
-  align-content: center;
-  justify-content: center;
-  width: 28px;
-  height: 28px;
-  padding: 6px;
-  margin: -1px;
+  padding: 5px;
   transform: translateX(-1px);
   color: var(--vkui--color_icon_secondary);
   border: none;
-  border-radius: 2px;
+  border-radius: inherit;
   background: transparent;
   box-sizing: border-box;
   cursor: pointer;
